--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ root = true
 
 # Indentation and spacing
 indent_size = 4
-indent_style = tab
+indent_style = space
 tab_width = 4
 
 # Naming Conventions
